Flesh out widget saving and correct several layout issues.
* Hide neighbors when editing.

--- a/app/assets/stylesheets/partials/board.css.sass
+++ b/app/assets/stylesheets/partials/board.css.sass
@@ -22,7 +22,9 @@ $navigate-prefix: "Visit "
 
       &.panning
         +panning
-
+  &.editing
+    .neighbor
+      visibility: hidden
 .board
   // border: 1px dashed $black
   width: $board-width
